--- a/css_advanced/index.html
+++ b/css_advanced/index.html
@@ -6,7 +6,7 @@
   <title>Smile School - Learn to Smile Like a Pro</title>
   <script src="https://kit.fontawesome.com/4a2b055604.js" crossorigin="anonymous"></script>
   <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@300;400;600;700&display=swap" rel="stylesheet" />
-  <link rel="stylesheet" href="styles/style.css" />
+  <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
   <header>
