--- a/css_advanced/index.html
+++ b/css_advanced/index.html
@@ -11,7 +11,7 @@
 <body>
   <header>
     <nav>
-      <img src="https://fakeimg.pl/250x250?text=Sample+Logo" alt="logo" />
+      <img src="./images/logo.png" alt="logo" />
       <ul>
         <li><a href="#">COURSE</a></li>
         <li><a href="#">PRICING</a></li>
@@ -21,34 +21,38 @@
   </header>
 
   <main>
-    <section>
+  <section>
+    <div style="text-align: center;">
+      <h1>Get schooled</h1>
       <div>
-        <h1>Get schooled</h1>
         <span>SMILES</span>
         <span>GRIN</span>
         <span>LAUGH</span>
+      </div>
+      <div style="margin-top: 30px;">
         <button>REGISTER FOR FREE</button>
       </div>
+    </div>
       <div>
         <h2>Learn from the pros</h2>
         <div>
           <div>
-            <img src="./images/1 (3).png" alt="Phillip Massey" />
+            <img src="./images/1.png" alt="Phillip Massey" />
             <h3>Phillip Massey</h3>
             <p>« Smile of the year » 2018 - 2019</p>
           </div>
           <div>
-            <img src="./images/6.png" alt="Nannie Lawrence" />
+            <img src="./images/3.png" alt="Nannie Lawrence" />
             <h3>Nannie Lawrence</h3>
             <p>Best « little smile » 2017</p>
           </div>
           <div>
-            <img src="./images/7.png" alt="Bruce Walters" />
+            <img src="./images/2.png" alt="Bruce Walters" />
             <h3>Bruce Walters</h3>
             <p>Best « Friend Smile » live performance 2019</p>
           </div>
           <div>
-            <img src="./images/8.png" alt="Henry Hughes" />
+            <img src="./images/4.png" alt="Henry Hughes" />
             <h3>Henry Hughes</h3>
             <p>« 24h smiles » winner 2016 - 2019</p>
           </div>
@@ -58,7 +62,7 @@
 
     <section>
       <div>
-        <img src="./images/Bitmap.png" alt="Smiling person" />
+        <img src="./images/5.png" alt="Smiling person" />
       </div>
       <div>
         <blockquote>« Those tutorials are concise and go straight to the point. I can’t think of a better place to learn smiling. And it’s so fun!</blockquote>
@@ -71,11 +75,11 @@
       <h2>Most popular tutorials</h2>
 
       <div>
-        <img src="./images/Bitmap (1).png" alt="Diagonal Smile" />
+        <img src="./images/9.png" alt="Diagonal Smile" />
         <h3>Diagonal Smile</h3>
         <p>Lorem ipsum dolor sit amet, consect adipiscing elit, sed do eiusmod.</p>
         <div>
-          <img src="./images/1 (3).png" alt="Phillip Massey" />
+          <img src="./images/1.png" alt="Phillip Massey" />
           <h4>Phillip Massey</h4>
         </div>
         <div>
@@ -89,47 +93,47 @@
       </div>
 
       <div>
-        <img src="./images/Bitmap (4).png" alt="Happy Smile" />
-        <h3>Happy Smile</h3>
-        <p>Lorem ipsum dolor sit amet, consect adipiscing elit, sed do eiusmod.</p>
-        <div>
-          <img src="./images/1 (3).png" alt="Phillip Massey" />
-          <h4>Phillip Massey</h4>
-        </div>
-        <div>
-          <i class="fa-solid fa-star"></i>
-          <i class="fa-solid fa-star"></i>
-          <i class="fa-solid fa-star"></i>
-          <i class="fa-solid fa-star"></i>
-          <i class="fa-solid fa-star"></i>
-        </div>
-        <p>8 min</p>
-      </div>
-
-      <div>
-        <img src="./images/Bitmap (3).png" alt="Natural Smile" />
-        <h3>Natural Smile</h3>
-        <p>Lorem ipsum dolor sit amet, consect adipiscing elit, sed do eiusmod.</p>
-        <div>
-          <img src="./images/1 (3).png" alt="Phillip Massey" />
-          <h4>Phillip Massey</h4>
-        </div>
-        <div>
-          <i class="fa-solid fa-star"></i>
-          <i class="fa-solid fa-star"></i>
-          <i class="fa-solid fa-star"></i>
-          <i class="fa-solid fa-star"></i>
-          <i class="fa-solid fa-star"></i>
-        </div>
-        <p>8 min</p>
-      </div>
-
-      <div>
-        <img src="./images/Bitmap (2).png" alt="Sad Smile" />
+        <img src="./images/7.png" alt="Sad Smile" />
         <h3>Sad Smile</h3>
         <p>Lorem ipsum dolor sit amet, consect adipiscing elit, sed do eiusmod.</p>
         <div>
-          <img src="./images/1 (3).png" alt="Phillip Massey" />
+          <img src="./images/1.png" alt="Phillip Massey" />
+          <h4>Phillip Massey</h4>
+        </div>
+        <div>
+          <i class="fa-solid fa-star"></i>
+          <i class="fa-solid fa-star"></i>
+          <i class="fa-solid fa-star"></i>
+          <i class="fa-solid fa-star"></i>
+          <i class="fa-solid fa-star"></i>
+        </div>
+        <p>8 min</p>
+      </div>
+
+      <div>
+        <img src="./images/8.png" alt="Natural Smile" />
+        <h3>Natural Smile</h3>
+        <p>Lorem ipsum dolor sit amet, consect adipiscing elit, sed do eiusmod.</p>
+        <div>
+          <img src="./images/1.png" alt="Phillip Massey" />
+          <h4>Phillip Massey</h4>
+        </div>
+        <div>
+          <i class="fa-solid fa-star"></i>
+          <i class="fa-solid fa-star"></i>
+          <i class="fa-solid fa-star"></i>
+          <i class="fa-solid fa-star"></i>
+          <i class="fa-solid fa-star"></i>
+        </div>
+        <p>8 min</p>
+      </div>
+
+      <div>
+        <img src="./images/6.png" alt="Happy Smile" />
+        <h3>Happy Smile</h3>
+        <p>Lorem ipsum dolor sit amet, consect adipiscing elit, sed do eiusmod.</p>
+        <div>
+          <img src="./images/1.png" alt="Phillip Massey" />
           <h4>Phillip Massey</h4>
         </div>
         <div>
@@ -146,22 +150,22 @@
     <section>
       <h2>Free membership</h2>
       <div>
-        <img src="./images/smile.svg" alt="Smile Icon" />
+        <img src="./images/smile.png" alt="Smile Icon" />
         <h3>Lorem Ipsum</h3>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
       </div>
       <div>
-        <img src="./images/smile.svg" alt="Smile Icon" />
+        <img src="./images/smile.png" alt="Smile Icon" />
         <h3>Lorem Ipsum</h3>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
       </div>
       <div>
-        <img src="./images/smile.svg" alt="Smile Icon" />
+        <img src="./images/smile.png" alt="Smile Icon" />
         <h3>Lorem Ipsum</h3>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
       </div>
       <div>
-        <img src="./images/smile.svg" alt="Smile Icon" />
+        <img src="./images/smile.png" alt="Smile Icon" />
         <h3>Lorem Ipsum</h3>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
       </div>
@@ -190,7 +194,7 @@
   <footer>
     <section>
       <div>
-        <img src="https://fakeimg.pl/250x250?text=Sample+Logo" alt="logo" />
+        <img src="./images/logo.png" alt="logo" />
         <div>
           <i class="fa-brands fa-facebook"></i>
           <i class="fa-brands fa-twitter"></i>
